--- a/src/index.css
+++ b/src/index.css
@@ -40,24 +40,25 @@ h1 {
   line-height: 1.1;
 }
 
-/* , input::file-selector-button, input[type="submit"] */
-button {
+button, input[type="submit"], input::file-selector-button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 2px solid rgb(100, 108, 255);
+  color: rgb(100, 108, 255);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  transition: border-color 0.35s, color 0.35s;
+  &:hover {
+    border-color: rgb(120, 65, 255);
+    color: rgb(120, 65, 255);
+  }
+  &:focus,
+  &:focus-visible {
+    outline: 3px solid rgb(75, 0, 150);
+  }
 }
 
 @media (prefers-color-scheme: light) {
