--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,13 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgb(215,215,215);
+
   text-shadow: 1px 2px 3px black;
   background: linear-gradient(45deg,
-    rgb(100, 108, 255), rgb(120, 25, 255)
+    /* rgb(100, 108, 255), rgb(120, 25, 255) */
+    rgb(80, 15, 205), rgb(100, 30, 205)
+
   );
 
   font-synthesis: none;
@@ -51,14 +54,30 @@ button, input[type="submit"], input::file-selector-button {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
   transition: border-color 0.35s, color 0.35s;
+}
+
+button, input[type="submit"] {
   &:hover {
     border-color: rgb(120, 65, 255);
     color: rgb(120, 65, 255);
   }
-  &:focus,
-  &:focus-visible {
+  &:focus, &:focus-visible {
     outline: 3px solid rgb(75, 0, 150);
   }
+}
+
+input[type='file'] {
+  &:hover {
+    &::file-selector-button {
+      border-color: rgb(120, 65, 255);
+      color: rgb(120, 65, 255);
+    }
+  }
+  /* &:focus, &:focus-visible {
+    &::file-selector-button {
+      outline: 3px solid rgb(75, 0, 150);
+    }
+  } */
 }
 
 @media (prefers-color-scheme: light) {
