--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,6 @@
   min-height: inherit;
   /* padding: 2rem; */
   text-align: center;
-
-  /* vars */
 }
 
 @keyframes fadeIn { from { opacity: 50%; }}
@@ -77,8 +75,41 @@ nav {
 
 section {
   max-width: inherit;
-  width: max(90vw, 600px);
-  height: max(85vh, 600px);
+  width: max(90vw, 300px);
+  height: max(85vh, 300px);
+  place-self: center;
+
+  & > details {
+    background: linear-gradient(45deg, rgba(60,0,205,0.45), rgba(60,0,205,0.7)), black;
+    border-bottom: 2px solid black;
+
+    &:not([open]) {
+      
+      &:hover{
+        background: linear-gradient(45deg, rgba(60,0,205,0.6), rgba(60,0,205,0.85)), black;
+      }
+
+
+      & > div:first-of-type {
+        opacity: 0;
+      }
+    }
+    
+    &[open] > * {
+      transition: opacity 0.7s linear;
+      opacity: initial;
+    }
+
+    /* TODO: clean this up further */
+    & > div:first-of-type {
+      padding-top: 2vh;
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+      gap: 2vh;
+      max-width: 600px;
+    }
+  }
 
   &.cards {
     overflow: hidden;
@@ -86,12 +117,10 @@ section {
     place-items: center;
   }
 
-  &.matches {
-    margin-top: 2.5vh;
-  }
-  
   &.matches, &.settings {
+    margin-top: 2.5vh;
     overflow-y: auto;
+    padding: 0 2vw;
   }
   
   &.upload {
@@ -113,26 +142,13 @@ section {
 }
 
 .settings {
-  /* background: linear-gradient(45deg, rgba(60,0,205,0.45), rgba(60,0,205,0.7)), black; */
-
   margin-top: 5vh;
   
   align-items: center;
 
   & details {
-    min-width: 90%;
+    width: 90%;
     
-    /* TODO: that border thing */
-    & summary {
-      list-style-position: outside;
-      place-self: center;
-      width: 80%;
-    }
-
-    & h3 {
-      margin: 0 auto;
-      width: fit-content;
-    }
     & form {
       display: flex;
       flex-direction: column;
@@ -200,105 +216,39 @@ section {
   }
 }
 
-/* TODO: this query can maybe make more sense... */
-/* refactor this all later */
 details {
   margin-bottom: 1vh;
   border-radius: 10px;
 
-  /* TODO: revisit this */
-  &:is(dialog *) {
-    padding: 0 10%;
-    &.moreButtons {
-      /* border-bottom: 3px solid rgba(70,0,205,0.85); */
-      margin-top: 3vh;
-      padding-bottom: 2vh;
-      margin-bottom: 1.5vh;
-    }
+  & summary {
+    list-style-position: outside;
+    place-self: center;
+    width: 80%;
   }
 
-  &:not(.moreButtons) {
-    background: linear-gradient(45deg, rgba(60,0,205,0.45), rgba(60,0,205,0.7)), black;
-    border-bottom: 2px solid black;
-    
-    &:is(dialog *) {
-      background: linear-gradient(135deg,
-      transparent,
-      rgba(85, 0, 235, 0.3));
+  & h3 {
+    margin: 0 auto;
+    width: fit-content;
+  }
+  
+  &[name="tabs"], &:is(section > *) {
 
-      &:hover:not([open]) {
-        background: linear-gradient(135deg,
-      transparent,
-      rgba(85, 0, 235, 0.35),
-      rgba(85, 0, 235, 0.55));
-      }
-        
-      border-top: 2px solid rgba(70,0,205,0.85);
-      border-bottom: 2px solid rgba(70,0,205,0.85);
-        
-      &[open] {
-        border-top: 2px solid rgba(80,0,195,0.85);
-        border-bottom: 2px solid rgba(80,0,195,0.85);
-        background:
-        /* rgba(35, 35, 35, 0.05), */
-        linear-gradient(110deg,
-        rgba(0, 0, 0, 0.45),
-        rgba(0, 0, 0, 0.35)),
-        rgb(80, 0, 190);
-  
-  
-        /* TODO: revisit this */
-  
-        text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.45),
-          /* 2px 3px 3px rgba(85, 85, 85, 0.15), */
-          3px 5px 10px rgba(0, 0, 0, 0.65),
-          /* -3px 4px 5px rgba(85, 85, 85, 0.25), */
-          -5px -3px 15px rgba(0, 0, 0, 0.85);
-          /* -7px -7px 20px rgba(0, 0, 0, 0.85); */
-  
-        & p {
-          padding-bottom: 0.5rem;
-        }
-  
-        & li {
-          padding-bottom: 1.1rem;
-        }
-      }
-    }
-  
-    /*
-    & li {
-      line-height:normal;
-    }
-    */
-  
-    & > * {
-      transition: opacity 0.8s linear; 
-    }
-  
-    &:not([open]) > div {
-      /* max-height: 0; */
-      /* display: none; */
-      /* opacity: 0; */
-      overflow: hidden;
-    }
-    
     &[open] {
-      padding-bottom: 2vh;
+      /* padding-bottom: 2vh; */
+      padding: 2vh 3vw;
       
-      & > div {
-        animation: unfoldDetails 0.8s;
-        /*
-        opacity: initial;
-        max-height: 80vh;
-        */
+      & > summary {
+        /* list style */
+        list-style-type:  none;
       }
+      
+      /* & > div {
+      
+      } */
     }
   
-    /* FIXME: this has different list styles everywhere */
     & > summary {
       padding: 2vh 0;
-      list-style-position: initial;
     }
   
     & fieldset {
@@ -315,55 +265,44 @@ details {
       justify-content: space-evenly;
       /* gap: 2vw; */
       gap: 1vh;
-        & > label {
-          /* margin: 0 auto; */
-          &:has(input[type="number"]){
-            margin: 1vh 25%;
-            justify-content: space-between;
-          }
+      
+      & > label {
+        /* margin: 0 auto; */
+        &:has(input[type="number"]){
+          margin: 1vh 25%;
+          justify-content: space-between;
         }
       }
+    }
+    
     & label {
       margin: 0;
       display: flex;
       gap: 1vw;
     }
+    
     & input {
       margin: 0;
       place-self: center;
     }
+    
     & p {
       margin: 2px auto;
     }
+    
     & > div {
       display: flex;
       gap: 2vw;
       justify-content: space-evenly;
     }
   }
-  
-  /* TODO: remove when switching back to the form */
-  & div:not(fieldset > *):not(dialog *) {
-    padding-top: 2vh;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    gap: 2vh;
-    max-width: 600px;
-  }
-  /* TODO: fix this transition?
-  &[open] {
-    min-height: 200px;
-    transition: height 0.6s linear;
-  }
-  */
 }
 
 /* .sources {
   padding-bottom: 2vh;
 } */
 
-.coverLetter {
+li, .coverLetter {
   text-align: left;
 }
 
@@ -444,16 +383,6 @@ div.buttons, menu {
   }
 }
 
-dialog details form {
-  display: flex;
-  flex-direction: column;
-  gap: 2vh;
-
-  & menu {
-    min-width: 400px;
-  }
-}
-
 dialog {
   text-shadow: none;
   border: 3px solid rgb(100, 108, 255);
@@ -461,7 +390,6 @@ dialog {
 
   height: 95svh;
   width: 95vw;
-  /* margin: 0 auto; */
 
   &[open] {
     animation: unfold 0.3s;
@@ -482,12 +410,78 @@ dialog {
     display: flex;
     flex-direction: row-reverse;
   }
+
   & > div {
-  max-width: 80%;
-  margin: 0 auto;
+    max-width: 80%;
+    margin: 0 auto;
 
     & ul {
       text-align: left;
+    }
+  }
+
+  & details {
+    &:first-of-type {
+      margin-top: 3vh;
+      margin-bottom: 1.5vh;
+    }
+      
+    &[name="tabs"] {
+      padding: 0 1vw;
+  
+      background: linear-gradient(135deg,
+      transparent,
+      rgba(85, 0, 235, 0.3));
+  
+      &:hover:not([open]) {
+        background: linear-gradient(135deg,
+          transparent,
+        rgba(85, 0, 235, 0.35),
+        rgba(85, 0, 235, 0.55));
+      }
+        
+      border-top: 2px solid rgba(70,0,205,0.85);
+      border-bottom: 2px solid rgba(70,0,205,0.85);
+        
+      &[open] {
+        border-top: 2px solid rgba(80,0,195,0.85);
+        border-bottom: 2px solid rgba(80,0,195,0.85);
+        
+        background:
+        /* rgba(35, 35, 35, 0.05), */
+          linear-gradient(110deg,
+          rgba(0, 0, 0, 0.45),
+          rgba(0, 0, 0, 0.35)),
+          rgb(80, 0, 190);
+  
+  
+        /* TODO: revisit this */
+  
+        text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.45),
+          /* 2px 3px 3px rgba(85, 85, 85, 0.15), */
+          3px 5px 10px rgba(0, 0, 0, 0.65),
+          /* -3px 4px 5px rgba(85, 85, 85, 0.25), */
+          -5px -3px 15px rgba(0, 0, 0, 0.85);
+          /* -7px -7px 20px rgba(0, 0, 0, 0.85); */
+  
+        & p {
+          padding-bottom: 0.5rem;
+        }
+  
+        & li {
+          padding-bottom: 1.1rem;
+        }
+  
+        & form {
+          display: flex;
+          flex-direction: column;
+          gap: 2vh;
+        
+          & menu {
+            min-width: 400px;
+          }
+        }
+      }
     }
   }
 }
@@ -498,8 +492,6 @@ dialog {
   gap: 2vh;
   margin-block-start: 0;
   padding-inline-start: 0;
-  /* TODO: not on mobile devices */
-  padding-right: 5px;
 
   & li {
     list-style: none;
@@ -549,6 +541,31 @@ dialog {
     max-width: 80%;
   }
 }
-/* menu... bottom nav? */
 
-/* jobs... list, like DM chats */
+
+@media screen and (max-width: 600px) {
+  .card {
+    padding: 0.75em;
+  }
+}
+
+@media screen and (max-height: 600px) and (orientation: landscape) {
+  main, section, nav {
+    height: 100vh;
+  }
+
+  main {
+    flex-direction: initial;
+  }
+
+  nav {
+    border-radius: initial;
+    flex-direction: column;
+    max-width: 150px;
+    justify-content: space-evenly;
+  }
+  
+  .card {
+    padding: 0.75em;
+  }
+}
