--- a/src/App.css
+++ b/src/App.css
@@ -74,10 +74,13 @@ nav {
 }
 
 section {
-  max-width: inherit;
-  width: max(90vw, 300px);
+  /* max-width: inherit; */
+  width: max(95vw, 300px);
   height: max(85vh, 300px);
   place-self: center;
+  padding: 0 2vw;
+
+  transition: all 0.5s;
 
   & > details {
     background: linear-gradient(45deg, rgba(60,0,205,0.45), rgba(60,0,205,0.7)), black;
@@ -95,7 +98,7 @@ section {
       }
     }
     
-    &[open] > * {
+    &[open] > div {
       transition: opacity 0.7s linear;
       opacity: initial;
     }
@@ -120,7 +123,6 @@ section {
   &.matches, &.settings {
     margin-top: 2.5vh;
     overflow-y: auto;
-    padding: 0 2vw;
   }
   
   &.upload {
@@ -135,7 +137,7 @@ section {
 .upload form, .settings {
   display: inherit;
   flex-direction: column;
-  /* TODO: change this background */
+
   /* width: clamp(300px, 50%, 600px); */
   align-content: space-between;
   /* gap: 5vh; */
@@ -146,14 +148,12 @@ section {
   
   align-items: center;
 
-  & details {
-    width: 90%;
-    
+  & details {    
     & form {
       display: flex;
       flex-direction: column;
       gap: 1vh;
-      width: 75%;
+      width: clamp(300px, 75%, 800px);
       justify-self: center;
       
       & label {
@@ -164,13 +164,16 @@ section {
     }
   }
   & menu {
-    width: min(400px, 50%);
+    width: clamp(200px, 50%, 400px);
     place-self: center;
   }
 }
 
 /* TODO: decide later if I want to keep this structure here */
-.upload form  {
+.upload form {
+  height: clamp(250px, 60%, 350px);
+  width: clamp(250px, 80%, 350px);
+
   margin: 0 auto;
   padding: 10%;
   font-size: 1rem;
@@ -195,19 +198,18 @@ section {
       flex-direction: column-reverse;
     }
   }
+  
+  & label {
+    min-height: 140px;
+    & p {
+      margin: 5px auto;
+    }
+  }
 
   & input {
     font-size: inherit;
     /* TODO: style buttons */
-    
-    &[type="file"]{
-      text-wrap: pretty;
-      &::file-selector-button {
-        width: 100%;
-        padding: 5px 0;
-        margin-bottom: 1vh;
-      }
-    }
+    width: 80%;
 
     &[type="submit"] {
       padding: 5px 0;
@@ -217,13 +219,15 @@ section {
 }
 
 details {
+  place-self: center;
+  width: 90%;
   margin-bottom: 1vh;
   border-radius: 10px;
 
   & summary {
     list-style-position: outside;
     place-self: center;
-    width: 80%;
+    width: min(80%, 450px);
   }
 
   & h3 {
@@ -232,19 +236,13 @@ details {
   }
   
   &[name="tabs"], &:is(section > *) {
-
     &[open] {
-      /* padding-bottom: 2vh; */
       padding: 2vh 3vw;
       
       & > summary {
-        /* list style */
+        /* TODO: list style something something */
         list-style-type:  none;
       }
-      
-      /* & > div {
-      
-      } */
     }
   
     & > summary {
@@ -252,7 +250,7 @@ details {
     }
   
     & fieldset {
-      width: clamp(250px, 80%, 600px);
+      width: clamp(250px, 85%, 800px);
       margin: 2vh auto;
       padding: 2vh 1.5vw;
       border-radius: 5px;
@@ -330,8 +328,7 @@ li, .coverLetter {
   }
 
   transition: all 0.6s;
-  animation: slideUp 0.6s, fadeIn;
-
+  
   padding: 2em;
   /* TODO: transitions here */
   border-radius: 5%;
@@ -391,6 +388,7 @@ dialog {
   height: 95svh;
   width: 95vw;
 
+  /* highighted: text shadow: none */
   &[open] {
     animation: unfold 0.3s;
     & > * {
@@ -432,7 +430,7 @@ dialog {
       background: linear-gradient(135deg,
       transparent,
       rgba(85, 0, 235, 0.3));
-  
+
       &:hover:not([open]) {
         background: linear-gradient(135deg,
           transparent,
@@ -463,23 +461,23 @@ dialog {
           /* -3px 4px 5px rgba(85, 85, 85, 0.25), */
           -5px -3px 15px rgba(0, 0, 0, 0.85);
           /* -7px -7px 20px rgba(0, 0, 0, 0.85); */
-  
-        & p {
-          padding-bottom: 0.5rem;
-        }
-  
-        & li {
-          padding-bottom: 1.1rem;
-        }
-  
-        & form {
-          display: flex;
-          flex-direction: column;
-          gap: 2vh;
-        
-          & menu {
-            min-width: 400px;
-          }
+      }
+
+      & p {
+        padding-bottom: 0.5rem;
+      }
+
+      & li {
+        padding-bottom: 1.1rem;
+      }
+
+      & form {
+        display: flex;
+        flex-direction: column;
+        gap: 2vh;
+      
+        & menu {
+          width: clamp(200px, 50%, 400px);
         }
       }
     }
@@ -547,6 +545,7 @@ dialog {
   .card {
     padding: 0.75em;
   }
+
 }
 
 @media screen and (max-height: 600px) and (orientation: landscape) {
@@ -561,11 +560,148 @@ dialog {
   nav {
     border-radius: initial;
     flex-direction: column;
-    max-width: 150px;
+    max-width: 75px;
     justify-content: space-evenly;
   }
   
   .card {
     padding: 0.75em;
   }
+}
+
+
+/* test stuff. TODO: organize and put this somewhere */
+
+input, textarea, label:has(input[type="file"]) {
+  background: linear-gradient(75deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.35)),
+  rgb(80, 0, 160);
+  font-family: inherit;
+  font-size: min(18px, 1.2rem);
+  text-shadow:
+  1px 2px 2px rgba(0, 0, 0, 0.5),
+  -1px -2px 10px rgb(30, 30, 90),
+  -2px 3px 20px rgba(110, 110, 200, 0.75)
+    /* -2px 3px 5px rgb(115, 115, 255), */
+    /* -2px -3px 5px black */
+  ;
+  color: rgb(150, 150, 255);
+  border: 3px solid rgba(120, 0, 210, 0.6);
+  border-radius: 5px;
+
+  &:focus {
+    outline: 1px solid rgba(120, 0, 210, 0.8);
+  }
+
+  &[type="file"] {
+    text-wrap: pretty;
+    text-align-last: center;
+    &::file-selector-button {
+      width: 100%;
+      padding: 5px 0;
+      margin-bottom: max(2vh, 10px);
+    }
+    border: none;
+    background: none;
+    padding: 1vh 0;
+  }
+}
+
+input {
+  padding-left: 0.3vw;
+}
+
+textarea {
+  width: clamp(250px, 90%, 800px);
+  place-self: center;
+  padding: 0.5vh 0.5vw;
+  border-radius: 5px;
+}
+
+nav button {
+  display: none;
+}
+
+@media screen and (max-height: 600px) and (orientation: landscape) {
+  main {
+    flex-direction: row;
+    width: 100vw;
+  }
+
+  nav {
+    flex-direction: column;
+  }
+
+  nav button {
+    display: initial;
+    padding: 3px;
+  }
+
+  nav a {
+    opacity: 0;
+  }
+
+  section {
+    max-width: 85vw;
+
+    &:has(~ nav:focus-within),
+    /* &:has(~ nav a:hover), */
+    &:has(~ nav *:active) {
+      width: 80%;
+
+      & ~ nav {
+        max-width: 150px;
+        transition: width 0.6s;
+
+        & a {
+          opacity: initial;
+          transition: opacity 1s;
+        }
+        & button {
+          padding: 5%;
+          transition: padding 0.3s;
+        }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  nav, main {
+    overflow-y: hidden;
+  }
+
+  nav button { display: initial; }
+
+  nav a { display: none; }
+
+  section {
+    &:has(~ nav:focus-within),
+    /* &:has(~ nav a:hover), */
+    &:has(~ nav *:active) {
+      height: 45vh;
+
+      & ~ nav {
+        height: 45vh;
+        flex-direction: column;
+        & a {
+          display: initial;
+        }
+      }
+  }
+
+  }
+}
+
+
+/* TODO:
+- check for this on corresponding JS handlers
+  (and turn them off conditionally)
+- alternate effects
+*/
+@media screen and (prefers-reduced-motion: no-preference) {
+  .card, .upload form {
+    animation: slideUp 0.6s, fadeIn;
+  }
+
 }
